--- a/src/minimartsystem/Products.form
+++ b/src/minimartsystem/Products.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -364,15 +364,15 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace pref="21" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jButton6" alignment="0" min="-2" pref="148" max="-2" attributes="0"/>
-                              <Component id="jButton8" alignment="0" min="-2" pref="148" max="-2" attributes="0"/>
-                              <Component id="jButton7" alignment="0" min="-2" pref="148" max="-2" attributes="0"/>
-                              <Component id="jButton4" alignment="0" min="-2" pref="148" max="-2" attributes="0"/>
+                              <Component id="jButton7" min="-2" pref="148" max="-2" attributes="0"/>
+                              <Component id="jButton8" min="-2" pref="148" max="-2" attributes="0"/>
+                              <Component id="jButton6" min="-2" pref="148" max="-2" attributes="0"/>
+                              <Component id="jButton4" min="-2" pref="148" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
